Fixing Zestful ad on mobile (#7)

--- a/static/css/zestful.css
+++ b/static/css/zestful.css
@@ -10,9 +10,17 @@
 }
 
 .zestful-box .zestful-box-inner {
-  padding: 1%;
+  padding: 3%;
   margin-bottom: 0;
   display: flex;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+  .zestful-box .zestful-box-inner {
+    padding: 1%;
+    flex-direction: row;
+  }
 }
 
 .zestful-box p {
@@ -20,11 +28,16 @@
 }
 
 .zestful-box .logo {
-  width: 22%;
   min-width: 190px;
-  margin-right: 15px;
   display: flex;
   justify-content: center;
+}
+
+@media screen and (min-width: 768px) {
+  .zestful-box .logo {
+    width: 22%;
+    margin-right: 15px;
+  }
 }
 
 .zestful-box .logo a {
@@ -37,14 +50,34 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  margin-top: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .zestful-box .text {
+    margin-top: 0;
+  }
 }
 
 .zestful-box .text h3 {
-  margin: 5px 0 10px 0;
-  font-size: 1.6em;
+  font-size: 1.4em;
+  margin: 0 0 20px 0;
+}
+
+@media screen and (min-width: 768px) {
+  .zestful-box .text h3 {
+    margin: 5px 0 10px 0;
+    font-size: 1.6em;
+  }
 }
 
 .zestful-box .text p {
   margin: 0;
-  font-size: 0.75em;
+  font-size: 0.9em;
+}
+
+@media screen and (min-width: 768px) {
+  .zestful-box .text p {
+    font-size: 0.75em;
+  }
 }
